--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>AISHU's GAMING HUB</h1>
+        <h1>AISHU GAMING HUB</h1>
         <p class="instructions">
             Welcome to the AISHU's Gaming Hub!  Let's Match the Meme. Flip over two cards at a time and try to find all the matching pairs. Be quick and remember where you saw the cards!
         </p>
